--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-http-crypt",
-  "version": "1.0.2",
+  "version": "1.0.5",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc dist && npm cache clean",
@@ -33,45 +33,45 @@
   ],
   "author": "Martin Wiesmüller <m.wiesmueller@werbasinnotec.com>",
   "dependencies": {
-    "@angular/animations": "4.4.4",
-    "@angular/common": "4.4.4",
-    "@angular/compiler": "4.4.4",
-    "@angular/compiler-cli": "4.4.4",
-    "@angular/core": "4.4.4",
-    "@angular/forms": "4.4.4",
-    "@angular/http": "4.4.4",
-    "@angular/platform-browser": "4.4.4",
-    "@angular/platform-browser-dynamic": "4.4.4",
-    "@angular/platform-server": "4.4.4",
-    "@angular/router": "4.4.4",
+    "@angular/animations": "^4.4.5",
+    "@angular/common": "^4.4.5",
+    "@angular/compiler": "^4.4.5",
+    "@angular/compiler-cli": "^4.4.5",
+    "@angular/core": "^4.4.5",
+    "@angular/forms": "^4.4.5",
+    "@angular/http": "^4.4.5",
+    "@angular/platform-browser": "^4.4.5",
+    "@angular/platform-browser-dynamic": "^4.4.5",
+    "@angular/platform-server": "^4.4.5",
+    "@angular/router": "^4.4.5",
     "angular2-jwt": "0.2.3",
     "blob-util": "1.3.0",
-    "core-js": "2.5.0",
+    "core-js": "2.5.1",
     "crypto-js": "3.1.9-1",
     "font-awesome": "4.7.0",
     "reflect-metadata": "0.1.10",
     "rxjs": "5.4.3",
-    "zone.js": "0.8.17"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@angularclass/hmr": "2.1.3",
     "@angularclass/hmr-loader": "3.0.4",
     "@types/core-js": "0.9.43",
-    "@types/jasmine": "2.5.54",
-    "@types/lodash": "4.14.74",
-    "@types/node": "8.0.25",
-    "@types/selenium-webdriver": "3.0.4",
+    "@types/jasmine": "2.6.0",
+    "@types/lodash": "4.14.77",
+    "@types/node": "8.0.33",
+    "@types/selenium-webdriver": "3.0.7",
     "angular2-template-loader": "0.6.2",
-    "autoprefixer": "7.1.3",
+    "autoprefixer": "7.1.5",
     "awesome-typescript-loader": "3.2.3",
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
-    "codelyzer": "3.1.2",
-    "copy-webpack-plugin": "4.0.1",
+    "codelyzer": "3.2.1",
+    "copy-webpack-plugin": "4.1.1",
     "css-loader": "0.28.7",
     "del-cli": "1.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "0.11.2",
+    "file-loader": "1.1.5",
     "gulp": "3.9.1",
     "gulp-eslint": "4.0.0",
     "gulp-inline-ng2-template": "4.0.0",
@@ -92,32 +92,32 @@
     "karma-mocha-reporter": "2.2.4",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.4",
+    "karma-webpack": "2.0.5",
     "markdown-loader": "2.0.1",
     "node-sass": "4.5.3",
     "null-loader": "0.1.1",
     "postcss-loader": "2.0.6",
     "pre-commit": "1.2.2",
     "protractor": "5.1.2",
-    "pug": "2.0.0-rc.3",
+    "pug": "2.0.0-rc.4",
     "pug-html-loader": "1.1.5",
     "raw-loader": "^0.5.1",
     "remap-istanbul": "0.9.5",
     "require-dir": "0.3.2",
-    "rimraf": "2.6.1",
+    "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "shelljs": "0.7.8",
-    "style-loader": "0.18.2",
+    "style-loader": "0.19.0",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-loader": "2.3.4",
+    "ts-loader": "2.3.7",
     "tslint": "5.7.0",
     "tslint-loader": "3.5.3",
-    "typedoc": "0.8.0",
-    "typescript": "2.5.2",
-    "url-loader": "0.5.9",
-    "webpack": "3.5.5",
-    "webpack-dev-server": "2.7.1",
+    "typedoc": "0.9.0",
+    "typescript": "2.5.3",
+    "url-loader": "0.6.2",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.1",
     "webpack-shell-plugin": "0.5.0"
   }
 }
