--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-http-crypt",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc dist && npm cache clean",
@@ -33,41 +33,41 @@
   ],
   "author": "Martin Wiesmüller <m.wiesmueller@werbasinnotec.com>",
   "dependencies": {
-    "@angular/animations": "^4.4.5",
-    "@angular/common": "^4.4.5",
-    "@angular/compiler": "^4.4.5",
-    "@angular/compiler-cli": "^4.4.5",
-    "@angular/core": "^4.4.5",
-    "@angular/forms": "^4.4.5",
-    "@angular/http": "^4.4.5",
-    "@angular/platform-browser": "^4.4.5",
-    "@angular/platform-browser-dynamic": "^4.4.5",
-    "@angular/platform-server": "^4.4.5",
-    "@angular/router": "^4.4.5",
-    "angular2-jwt": "0.2.3",
-    "blob-util": "1.3.0",
-    "core-js": "2.5.1",
-    "crypto-js": "3.1.9-1",
-    "font-awesome": "4.7.0",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.3",
-    "zone.js": "0.8.18"
+    "@angular/animations": "^5.0.5",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
+    "@angular/platform-server": "^5.0.5",
+    "@angular/router": "^5.0.5",
+    "angular2-jwt": "^0.2.3",
+    "blob-util": "^1.3.0",
+    "core-js": "^2.5.1",
+    "crypto-js": "^3.1.9-1",
+    "font-awesome": "^4.7.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.5.4",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angularclass/hmr": "2.1.3",
     "@angularclass/hmr-loader": "3.0.4",
     "@types/core-js": "0.9.43",
-    "@types/jasmine": "2.6.0",
-    "@types/lodash": "4.14.77",
-    "@types/node": "8.0.33",
-    "@types/selenium-webdriver": "3.0.7",
+    "@types/jasmine": "2.8.2",
+    "@types/lodash": "4.14.87",
+    "@types/node": "8.0.55",
+    "@types/selenium-webdriver": "3.0.8",
     "angular2-template-loader": "0.6.2",
-    "autoprefixer": "7.1.5",
-    "awesome-typescript-loader": "3.2.3",
+    "autoprefixer": "7.2.1",
+    "awesome-typescript-loader": "3.4.1",
     "babel-loader": "7.1.2",
     "babel-preset-es2015": "6.24.1",
-    "codelyzer": "3.2.1",
-    "copy-webpack-plugin": "4.1.1",
+    "codelyzer": "4.0.1",
+    "copy-webpack-plugin": "4.2.3",
     "css-loader": "0.28.7",
     "del-cli": "1.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
@@ -88,17 +88,17 @@
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.4",
+    "karma-jasmine": "1.1.1",
+    "karma-mocha-reporter": "2.2.5",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.5",
+    "karma-webpack": "2.0.6",
     "markdown-loader": "2.0.1",
-    "node-sass": "4.5.3",
+    "node-sass": "4.7.2",
     "null-loader": "0.1.1",
-    "postcss-loader": "2.0.6",
+    "postcss-loader": "2.0.9",
     "pre-commit": "1.2.2",
-    "protractor": "5.1.2",
+    "protractor": "5.2.0",
     "pug": "2.0.0-rc.4",
     "pug-html-loader": "1.1.5",
     "raw-loader": "^0.5.1",
@@ -110,14 +110,14 @@
     "style-loader": "0.19.0",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-loader": "2.3.7",
-    "tslint": "5.7.0",
+    "ts-loader": "3.2.0",
+    "tslint": "5.8.0",
     "tslint-loader": "3.5.3",
     "typedoc": "0.9.0",
-    "typescript": "2.5.3",
+    "typescript": "2.6.2",
     "url-loader": "0.6.2",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.9.1",
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.5",
     "webpack-shell-plugin": "0.5.0"
   }
 }
