--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-http-crypt",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc dist && npm cache clean",
@@ -33,24 +33,25 @@
   ],
   "author": "Martin Wiesmüller <m.wiesmueller@werbasinnotec.com>",
   "dependencies": {
-    "@angular/animations": "^5.0.5",
-    "@angular/common": "^5.0.5",
-    "@angular/compiler": "^5.0.5",
-    "@angular/compiler-cli": "^5.0.5",
-    "@angular/core": "^5.0.5",
-    "@angular/forms": "^5.0.5",
-    "@angular/http": "^5.0.5",
-    "@angular/platform-browser": "^5.0.5",
-    "@angular/platform-browser-dynamic": "^5.0.5",
-    "@angular/platform-server": "^5.0.5",
-    "@angular/router": "^5.0.5",
+    "@angular/animations": "^6.0.4",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/platform-server": "^6.0.4",
+    "@angular/router": "^6.0.4",
     "angular2-jwt": "^0.2.3",
     "blob-util": "^1.3.0",
     "core-js": "^2.5.1",
     "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.5.2",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
