--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-http-crypt",
-  "version": "1.4.2",
+  "version": "1.5.0",
   "license": "MIT",
   "scripts": {
     "clean": "rimraf node_modules doc dist && npm cache clean",
@@ -33,19 +33,19 @@
   ],
   "author": "Martin Wiesmüller <m.wiesmueller@werbasinnotec.com>",
   "dependencies": {
-    "@angular/animations": "^6.0.4",
-    "@angular/common": "^6.0.4",
-    "@angular/compiler": "^6.0.4",
-    "@angular/compiler-cli": "^6.0.4",
-    "@angular/core": "^6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "^6.0.4",
-    "@angular/platform-browser": "^6.0.4",
-    "@angular/platform-browser-dynamic": "^6.0.4",
-    "@angular/platform-server": "^6.0.4",
-    "@angular/router": "^6.0.4",
+    "@angular/animations": "^7.0.1",
+    "@angular/common": "^7.0.1",
+    "@angular/compiler": "^7.0.1",
+    "@angular/compiler-cli": "^7.0.1",
+    "@angular/core": "^7.0.1",
+    "@angular/forms": "^7.0.1",
+    "@angular/http": "^7.0.1",
+    "@angular/platform-browser": "^7.0.1",
+    "@angular/platform-browser-dynamic": "^7.0.1",
+    "@angular/platform-server": "^7.0.1",
+    "@angular/router": "^7.0.1",
     "angular2-jwt": "^0.2.3",
-    "blob-util": "^1.3.0",
+    "blob-util": "^2.0.2",
     "core-js": "^2.5.1",
     "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
@@ -57,68 +57,68 @@
   "devDependencies": {
     "@angularclass/hmr": "2.1.3",
     "@angularclass/hmr-loader": "3.0.4",
-    "@types/core-js": "0.9.43",
-    "@types/jasmine": "2.8.2",
-    "@types/lodash": "4.14.87",
-    "@types/node": "8.0.55",
-    "@types/selenium-webdriver": "3.0.8",
+    "@types/core-js": "2.5.0",
+    "@types/jasmine": "2.8.9",
+    "@types/lodash": "4.14.117",
+    "@types/node": "10.12.0",
+    "@types/selenium-webdriver": "3.0.12",
     "angular2-template-loader": "0.6.2",
-    "autoprefixer": "7.2.1",
-    "awesome-typescript-loader": "3.4.1",
-    "babel-loader": "7.1.2",
+    "autoprefixer": "9.3.1",
+    "awesome-typescript-loader": "5.2.1",
+    "babel-loader": "8.0.4",
     "babel-preset-es2015": "6.24.1",
-    "codelyzer": "4.0.1",
-    "copy-webpack-plugin": "4.2.3",
-    "css-loader": "0.28.7",
+    "codelyzer": "4.5.0",
+    "copy-webpack-plugin": "4.5.4",
+    "css-loader": "1.0.0",
     "del-cli": "1.1.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "1.1.5",
+    "file-loader": "2.0.0",
     "gulp": "3.9.1",
-    "gulp-eslint": "4.0.0",
-    "gulp-inline-ng2-template": "4.0.0",
-    "gulp-mocha": "4.3.1",
-    "gulp-pug": "3.3.0",
-    "gulp-sass": "3.1.0",
-    "gulp-watch": "4.3.11",
-    "html-loader": "0.5.1",
-    "html-webpack-plugin": "2.30.1",
-    "istanbul-instrumenter-loader": "3.0.0",
-    "jasmine-core": "2.8.0",
+    "gulp-eslint": "5.0.0",
+    "gulp-inline-ng2-template": "5.0.1",
+    "gulp-mocha": "6.0.0",
+    "gulp-pug": "4.0.1",
+    "gulp-sass": "4.0.2",
+    "gulp-watch": "5.0.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
     "json-loader": "0.5.7",
-    "karma": "1.7.1",
+    "karma": "3.1.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.1",
-    "karma-jasmine": "1.1.1",
+    "karma-coverage": "1.1.2",
+    "karma-jasmine": "1.1.2",
     "karma-mocha-reporter": "2.2.5",
     "karma-remap-istanbul": "0.6.0",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.6",
-    "markdown-loader": "2.0.1",
-    "node-sass": "4.7.2",
+    "karma-webpack": "3.0.5",
+    "markdown-loader": "4.0.0",
+    "node-sass": "4.9.4",
     "null-loader": "0.1.1",
-    "postcss-loader": "2.0.9",
+    "postcss-loader": "3.0.0",
     "pre-commit": "1.2.2",
-    "protractor": "5.2.0",
-    "pug": "2.0.0-rc.4",
+    "protractor": "5.4.1",
+    "pug": "2.0.3",
     "pug-html-loader": "1.1.5",
     "raw-loader": "^0.5.1",
-    "remap-istanbul": "0.9.5",
-    "require-dir": "0.3.2",
+    "remap-istanbul": "0.12.0",
+    "require-dir": "1.1.0",
     "rimraf": "2.6.2",
-    "sass-loader": "6.0.6",
-    "shelljs": "0.7.8",
-    "style-loader": "0.19.0",
+    "sass-loader": "7.1.0",
+    "shelljs": "0.8.2",
+    "style-loader": "0.23.1",
     "to-string-loader": "1.1.5",
     "ts-helpers": "1.1.2",
-    "ts-loader": "3.2.0",
-    "tslint": "5.8.0",
-    "tslint-loader": "3.5.3",
-    "typedoc": "0.9.0",
-    "typescript": "2.6.2",
-    "url-loader": "0.6.2",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.5",
+    "ts-loader": "5.2.2",
+    "tslint": "5.11.0",
+    "tslint-loader": "3.5.4",
+    "typedoc": "0.13.0",
+    "typescript": "3.1.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.23.1",
+    "webpack-dev-server": "3.1.10",
     "webpack-shell-plugin": "0.5.0"
   }
 }
