--- a/package.json
+++ b/package.json
@@ -1,124 +1,86 @@
 {
+  "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "ngx-http-crypt",
-  "version": "1.5.0",
-  "license": "MIT",
+  "description": "ngx http crypt module to de- and encrypt http requests",
+  "version": "1.5.2",
   "scripts": {
-    "clean": "rimraf node_modules doc dist && npm cache clean",
-    "clean-install": "npm run clean && npm install",
-    "clean-start": "npm run clean-install && npm start",
-    "create": "npm run flow.clean",
-    "bundle": "npm run flow.clean && npm run create && tsc",
-    "flow.clean": "./node_modules/.bin/del-cli bundles coverage demo-build typings \"components/**/*.+(js|d.ts|js.map|html)\" build \"innotec-auth-plugin.+(js|d.ts|js.map)\"",
-    "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --progress --profile --bail",
-    "server": "npm run create && webpack-dev-server --progress --port 8080 --public --host 0.0.0.0",
-    "webdriver-update": "webdriver-manager update",
-    "webdriver-start": "webdriver-manager start",
-    "lint": "tslint --force \"components/**/*.ts\"",
-    "e2e": "protractor",
-    "e2e-live": "protractor --elementExplorer",
-    "pretest": "npm run lint",
-    "test": "npm run create && karma start",
-    "posttest": "",
-    "test-watch": "karma start --no-single-run --auto-watch",
-    "ci": "npm run e2e && npm run test",
-    "docs": "typedoc --options typedoc.json src/app/app.component.ts",
-    "start": "npm run server",
-    "start:hmr": "npm run server -- --hot",
-    "postinstall": "npm run webdriver-update"
+    "ng": "ng",
+    "start": "ng serve",
+    "start:ssl": "ng serve --ssl --live-reload false",
+    "build": "ng build",
+    "build:packagr": "ng-packagr -p package.json",
+    "publish:dist": "cd ./dist && npm publish --access=public",
+    "test": "ng test --watch=false",
+    "test:watch": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "postinstall": "node ./ng-add-pug-loader.js"
   },
-  "keywords": [
-    "angular2",
-    "crypt"
+  "private": false,
+  "ngPackage": {
+    "lib": {
+      "entryFile": "src/public_api.ts"
+    },
+    "whitelistedNonPeerDependencies": [
+      "."
+    ]
+  },
+  "peerDependencies": {
+    "rxjs": "^6.3.3"
+  },
+  "pre-commit": [
+    "test"
   ],
-  "author": "Martin Wiesmüller <m.wiesmueller@werbasinnotec.com>",
   "dependencies": {
-    "@angular/animations": "^7.0.1",
-    "@angular/common": "^7.0.1",
-    "@angular/compiler": "^7.0.1",
-    "@angular/compiler-cli": "^7.0.1",
-    "@angular/core": "^7.0.1",
-    "@angular/forms": "^7.0.1",
-    "@angular/http": "^7.0.1",
-    "@angular/platform-browser": "^7.0.1",
-    "@angular/platform-browser-dynamic": "^7.0.1",
-    "@angular/platform-server": "^7.0.1",
-    "@angular/router": "^7.0.1",
-    "angular2-jwt": "^0.2.3",
-    "blob-util": "^2.0.2",
-    "core-js": "^2.5.1",
-    "crypto-js": "^3.1.9-1",
-    "font-awesome": "^4.7.0",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
-    "zone.js": "^0.8.18"
+    "@angular/animations": "~7.0.0",
+    "@angular/common": "~7.0.0",
+    "@angular/compiler": "~7.0.0",
+    "@angular/core": "~7.0.0",
+    "@angular/forms": "~7.0.0",
+    "@angular/http": "~7.0.0",
+    "@angular/platform-browser": "~7.0.0",
+    "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/router": "~7.0.0",
+    "core-js": "^2.5.4",
+    "crypto-js": "3.1.9-1",
+    "ng-cli-pug-loader": "^0.1.3",
+    "rxjs": "6.3.3",
+    "rxjs-compat": "6.3.3",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angularclass/hmr": "2.1.3",
-    "@angularclass/hmr-loader": "3.0.4",
-    "@types/core-js": "2.5.0",
-    "@types/jasmine": "2.8.9",
-    "@types/lodash": "4.14.117",
-    "@types/node": "10.12.0",
-    "@types/selenium-webdriver": "3.0.12",
-    "angular2-template-loader": "0.6.2",
-    "autoprefixer": "9.3.1",
-    "awesome-typescript-loader": "5.2.1",
-    "babel-loader": "8.0.4",
-    "babel-preset-es2015": "6.24.1",
-    "codelyzer": "4.5.0",
-    "copy-webpack-plugin": "4.5.4",
-    "css-loader": "1.0.0",
-    "del-cli": "1.1.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "2.0.0",
-    "gulp": "3.9.1",
-    "gulp-eslint": "5.0.0",
-    "gulp-inline-ng2-template": "5.0.1",
-    "gulp-mocha": "6.0.0",
-    "gulp-pug": "4.0.1",
-    "gulp-sass": "4.0.2",
-    "gulp-watch": "5.0.1",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "istanbul-instrumenter-loader": "3.0.1",
-    "jasmine-core": "3.3.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "json-loader": "0.5.7",
-    "karma": "3.1.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage": "1.1.2",
-    "karma-jasmine": "1.1.2",
+    "@angular-builders/custom-webpack": "^2.5.4",
+    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular/cli": "~7.0.3",
+    "@angular/compiler-cli": "~7.0.0",
+    "@angular/language-service": "~7.0.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/rx": "4.1.1",
+    "apply-loader": "^2.0.0",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "karma-mocha-reporter": "2.2.5",
-    "karma-remap-istanbul": "0.6.0",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "3.0.5",
-    "markdown-loader": "4.0.0",
-    "node-sass": "4.9.4",
-    "null-loader": "0.1.1",
-    "postcss-loader": "3.0.0",
-    "pre-commit": "1.2.2",
-    "protractor": "5.4.1",
-    "pug": "2.0.3",
-    "pug-html-loader": "1.1.5",
-    "raw-loader": "^0.5.1",
-    "remap-istanbul": "0.12.0",
-    "require-dir": "1.1.0",
-    "rimraf": "2.6.2",
-    "sass-loader": "7.1.0",
-    "shelljs": "0.8.2",
-    "style-loader": "0.23.1",
-    "to-string-loader": "1.1.5",
-    "ts-helpers": "1.1.2",
-    "ts-loader": "5.2.2",
-    "tslint": "5.11.0",
-    "tslint-loader": "3.5.4",
-    "typedoc": "0.13.0",
-    "typescript": "3.1.3",
-    "url-loader": "1.1.2",
-    "webpack": "4.23.1",
-    "webpack-dev-server": "3.1.10",
-    "webpack-shell-plugin": "0.5.0"
-  }
+    "ng-packagr": "4.4.0",
+    "pre-commit": "^1.2.2",
+    "protractor": "~5.4.0",
+    "pug": "^2.0.3",
+    "pug-loader": "^2.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": "0.33.1",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
+  },
+  "main": "dist/bundles/ngx-http-crypt.umd.js",
+  "module": "dist/esm5/ngx-http-crypt.js",
+  "es2015": "dist/esm2015/ngx-http-crypt.js",
+  "typings": "dist/ngx-http-crypt.d.ts",
+  "metadata": "dist/ngx-http-crypt.metadata.json"
 }
