--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "ngx-http-crypt",
   "description": "ngx http crypt module to de- and encrypt http requests",
-  "version": "2.0.8",
+  "version": "3.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -32,14 +32,14 @@
     "test"
   ],
   "dependencies": {
-    "@angular/animations": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
+    "@angular/animations": "~9.0.5",
+    "@angular/common": "~9.0.5",
+    "@angular/compiler": "~9.0.5",
+    "@angular/core": "~9.0.5",
+    "@angular/forms": "~9.0.5",
+    "@angular/platform-browser": "~9.0.5",
+    "@angular/platform-browser-dynamic": "~9.0.5",
+    "@angular/router": "~9.0.5",
     "core-js": "^3.1.4",
     "crypto-js": "3.1.9-1",
     "ng-cli-pug-loader": "^0.2.0",
@@ -48,34 +48,34 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^8.0.2",
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
-    "@types/jasmine": "~3.3.13",
+    "@angular-builders/custom-webpack": "^9.0.0",
+    "@angular-devkit/build-angular": "~0.900.5",
+    "@angular/cli": "~9.0.5",
+    "@angular/compiler-cli": "~9.0.5",
+    "@angular/language-service": "~9.0.5",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~12.0.12",
+    "@types/node": "^12.11.1",
     "@types/rx": "4.1.1",
     "apply-loader": "^2.0.0",
     "codelyzer": "~5.1.0",
-    "jasmine-core": "~3.4.0",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "karma-mocha-reporter": "2.2.5",
-    "ng-packagr": "5.3.0",
+    "ng-packagr": "9.0.2",
     "pre-commit": "^1.2.2",
-    "protractor": "~5.4.0",
-    "pug": "^2.0.3",
+    "protractor": "~5.4.3",
+    "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
     "ts-node": "~8.3.0",
     "tsickle": "0.35.0",
     "tslint": "~5.18.0",
-    "typescript": "~3.4.5"
+    "typescript": "~3.7.5"
   },
   "main": "dist/bundles/ngx-http-crypt.umd.js",
   "module": "dist/esm5/ngx-http-crypt.js",
