--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "./node_modules/ng-packagr/package.schema.json",
   "name": "ngx-http-crypt",
   "description": "ngx http crypt module to de- and encrypt http requests",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,56 +26,56 @@
     ]
   },
   "peerDependencies": {
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.5.5"
   },
   "pre-commit": [
     "test"
   ],
   "dependencies": {
-    "@angular/animations": "~9.0.5",
-    "@angular/common": "~9.0.5",
-    "@angular/compiler": "~9.0.5",
-    "@angular/core": "~9.0.5",
-    "@angular/forms": "~9.0.5",
-    "@angular/platform-browser": "~9.0.5",
-    "@angular/platform-browser-dynamic": "~9.0.5",
-    "@angular/router": "~9.0.5",
-    "core-js": "^3.1.4",
-    "crypto-js": "3.1.9-1",
-    "ng-cli-pug-loader": "^0.2.0",
+    "@angular/animations": "~10.0.0",
+    "@angular/common": "~10.0.0",
+    "@angular/compiler": "~10.0.0",
+    "@angular/core": "~10.0.0",
+    "@angular/forms": "~10.0.0",
+    "@angular/platform-browser": "~10.0.0",
+    "@angular/platform-browser-dynamic": "~10.0.0",
+    "@angular/router": "~10.0.0",
+    "core-js": "^3.6.5",
+    "crypto-js": "4.0.0",
+    "ng-cli-pug-loader": "^0.2.2",
     "rxjs": "6.5.2",
-    "rxjs-compat": "6.5.2",
-    "zone.js": "~0.9.1"
+    "rxjs-compat": "6.5.5",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^9.0.0",
-    "@angular-devkit/build-angular": "~0.900.5",
-    "@angular/cli": "~9.0.5",
-    "@angular/compiler-cli": "~9.0.5",
-    "@angular/language-service": "~9.0.5",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "@types/rx": "4.1.1",
+    "@angular-builders/custom-webpack": "^9.2.0",
+    "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cli": "~10.0.0",
+    "@angular/compiler-cli": "~10.0.0",
+    "@angular/language-service": "~10.0.0",
+    "@types/jasmine": "~3.5.11",
+    "@types/jasminewd2": "~2.0.8",
+    "@types/node": "^14.0.14",
+    "@types/rx": "4.1.2",
     "apply-loader": "^2.0.0",
-    "codelyzer": "~5.1.0",
+    "codelyzer": "~5.2.2",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.3.0",
+    "jasmine-spec-reporter": "~5.0.2",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-mocha-reporter": "2.2.5",
-    "ng-packagr": "9.0.2",
+    "ng-packagr": "10.0.0",
     "pre-commit": "^1.2.2",
-    "protractor": "~5.4.3",
-    "pug": "^2.0.4",
+    "protractor": "~7.0.0",
+    "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
-    "ts-node": "~8.3.0",
-    "tsickle": "0.35.0",
-    "tslint": "~5.18.0",
-    "typescript": "~3.7.5"
+    "ts-node": "~8.10.2",
+    "tsickle": "0.38.1",
+    "tslint": "~6.1.2",
+    "typescript": "~3.9.5"
   },
   "main": "dist/bundles/ngx-http-crypt.umd.js",
   "module": "dist/esm5/ngx-http-crypt.js",
